syntax = "proto3";
package grpc;

// SERVICE
service Catalog {
  rpc Create (CreateRequest) returns (Response) {}
  rpc Update (UpdateRequest) returns (Response) {}
  rpc FindOne (FindOneRequest) returns (Response) {}
  rpc Find (FindRequest) returns (FindResponse) {}
  rpc DeleteById(DeleteByIdRequest) returns (Response) {}
}

// CREATE
message CreateRequest {
  CreateRequestData data = 1;
}

message CreateRequestData {
  string type = 1;
  map<string, string> attributes = 2;
}

// UPDATE
message UpdateRequest {
  UpdateRequestData data = 1;
}

message UpdateRequestData {
  string type = 1;
  string id = 2;
  map<string, string> attributes = 3;
}

// FIND
message FindRequest {
  int32 page = 1;
  int32 limit = 2;
  string sortBy = 3;
  map<string, string> filter = 4;
}

message FindResponse {
  Metadata metadata = 1;
  repeated FindResponseData data = 2;
}

message FindResponseData {
  string type = 1;
  string id = 2;
  map<string, string> attributes = 3;
}

message Metadata {
  Paginate paginate = 1;
}

message Paginate {
  int32 totalCount = 1;
  int32 pageCount = 2;
  int32 page = 3;
  int32 limit = 4;
  string sortBy = 5;
}

// FIND ONE
message FindOneRequest {
  string id = 1;
}

// DELETE BY ID
message DeleteByIdRequest {
  string id = 1;
}

// RESPONSE
message Response {
  string type = 1;
  string id = 2;
  map<string, string> attributes = 3;
}
